test/files/neg/lazy-override.check
lazy-override.scala:11: error: overriding val x: Int (defined in class A);
 override lazy val x: Int cannot override a concrete non-lazy value
    override lazy val x: Int = { print("/*B.x*/"); 3 }
                      ^
lazy-override.scala:13: error: overriding lazy val y: Int (defined in class A);
 override val y: Int must be declared lazy to override a concrete lazy value
    override val y: Int = { print("/*B.y*/"); 3 }
                 ^
two errors found
